[gd_scene load_steps=11 format=3 uid="uid://boytaudx1hu8o"]

[ext_resource type="Theme" uid="uid://dtljlfpi5hkeh" path="res://resources/themes/styles/main_menu.tres" id="1_6tf6x"]
[ext_resource type="Script" path="res://logic/main_menu/main_menu_credits.gd" id="2_fjwnn"]
[ext_resource type="Texture2D" uid="uid://d235ugdj62yp4" path="res://resources/textures/levels/mainmenu.png" id="3_ybrae"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i7ebs"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xc06j"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxmev"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_al15i"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="SystemFont" id="SystemFont_ok305"]
font_names = PackedStringArray("Franklin Gothic")

[sub_resource type="Theme" id="Theme_aviyc"]
Button/colors/font_color = Color(0.858824, 0.537255, 0, 1)
Button/colors/font_focus_color = Color(0.858824, 0.537255, 0, 1)
Button/colors/font_hover_color = Color(0.901961, 0.764706, 0, 1)
Button/colors/font_hover_pressed_color = Color(0.65098, 0.411765, 0, 1)
Button/colors/font_pressed_color = Color(0.65098, 0.411765, 0, 1)
Button/styles/focus = SubResource("StyleBoxFlat_i7ebs")
Button/styles/hover = SubResource("StyleBoxFlat_xc06j")
Button/styles/normal = SubResource("StyleBoxFlat_qxmev")
Button/styles/pressed = SubResource("StyleBoxFlat_al15i")
Label/fonts/font = SubResource("SystemFont_ok305")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bmfk0"]

[node name="main_menu_credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6tf6x")
script = ExtResource("2_fjwnn")

[node name="background" type="TextureRect" parent="."]
modulate = Color(0.431373, 0.431373, 0.431373, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -440.0
offset_top = -260.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ybrae")
expand_mode = 1

[node name="info_container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -588.5
offset_top = -289.0
offset_right = 588.5
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_aviyc")
alignment = 1

[node name="project" type="Label" parent="info_container"]
layout_mode = 2
text = "Final school project for the subjects PV (Programming) at SPŠE Ječná"
horizontal_alignment = 1
autowrap_mode = 2

[node name="separator" type="Label" parent="info_container"]
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 2

[node name="godot" type="Button" parent="info_container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.690196, 0.690196, 0.690196, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Godot Engine 4.2.1"

[node name="erik" type="Button" parent="info_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Erik Vaněk
"

[node name="back_to_main_menu_container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -157.0
offset_right = 394.0
offset_bottom = -100.0
grow_vertical = 0

[node name="back" type="Button" parent="back_to_main_menu_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_bmfk0")
text = "BACK TO MAIN MENU
"
alignment = 0

[node name="image" type="TextureRect" parent="."]
custom_minimum_size = Vector2(220, 248)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 488.0
offset_top = -75.0
offset_right = 768.0
offset_bottom = 275.0

[connection signal="pressed" from="info_container/godot" to="." method="_on_godot_pressed"]
[connection signal="gui_input" from="info_container/erik" to="." method="_on_erik_gui_input"]
[connection signal="pressed" from="info_container/erik" to="." method="_on_button_pressed"]
[connection signal="pressed" from="back_to_main_menu_container/back" to="." method="_on_back_pressed"]
